...
                              radius: 75,
                              backgroundImage: AssetImage(selectedImagePath!),
                            ),
                          )
                        : null),
                TextFormField(
                  key: const Key('gift_name'),
                  controller: _nameController,
                  decoration: const InputDecoration(labelText: 'Gift Name'),
                  readOnly: !isUpdatable && widget.gift != null,
                  validator: (value) {
                    if (value == null || value.trim().isEmpty) {
                      return 'Please enter the gift name';
                    }
                    return null;
                  },
                ),
                const SizedBox(height: 10),
                TextFormField(
                  key: const Key('gift_category'),
                  controller: _categoryController,
                  decoration: const InputDecoration(labelText: 'Category'),
                  readOnly: !isUpdatable && widget.gift != null,
                  validator: (value) {
                    if (value == null || value.trim().isEmpty) {
                      return 'Please enter the gift category';
                    }
                    return null;
                  },
                ),
                const SizedBox(height: 10),
                TextFormField(
                  key: const Key('gift_price'),
                  controller: _priceController,
                  decoration: const InputDecoration(labelText: 'Price'),
                  readOnly: !isUpdatable && widget.gift != null,
                  keyboardType: TextInputType.number,
                  validator: (value) {
                    if (value == null || value.trim().isEmpty) {
...
                    }
                    return null;
                  },
                ),
                const SizedBox(height: 10),
                TextFormField(
                  key: const Key('gift_desc'),
                  controller: _descriptionController,
                  decoration: const InputDecoration(labelText: 'Description'),
                  readOnly: !isUpdatable && widget.gift != null,
                  validator: (value) {
                    if (value == null || value.trim().isEmpty) {
                      return 'Please enter the gift description';
...
                      Center(
                        child: GiftImage(onImageSelected: _showImageSelected),
                      ),
                      const SizedBox(height: 10),
                      Center(
                        child: ElevatedButton(
                          key: const Key('create_gift'),
                          onPressed: _createxUpdateGift,
                          child: Text(
                            widget.gift == null ? 'Create Gift' : 'Update Gift',
                          ),
                        ),
                      ),
...
